--- a/QiHuangDJ/QiHuangDJ/QiHuangDJ-Info.plist
+++ b/QiHuangDJ/QiHuangDJ/QiHuangDJ-Info.plist
@@ -35,6 +35,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
