添加umeng统计，第三方登录 新浪完成，

--- a/QiHuangDJ/QiHuangDJ/QiHuangDJ-Info.plist
+++ b/QiHuangDJ/QiHuangDJ/QiHuangDJ-Info.plist
@@ -2,6 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<array>
+				<string></string>
+			</array>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent9f2c54ba9cf54cd2e55fdb6cb862230e</string>
+				<string>sina.904f216a6d26389b3fff036a838ab416</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string></string>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
