--- a/QiHuangDJ/QiHuangDJ/QiHuangDJ-Info.plist
+++ b/QiHuangDJ/QiHuangDJ/QiHuangDJ-Info.plist
@@ -31,8 +31,8 @@
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>tencent9f2c54ba9cf54cd2e55fdb6cb862230e</string>
-				<string>wb933509896</string>
+				<string>tencent100371282</string>
+				<string>wb2058806096</string>
 			</array>
 		</dict>
 	</array>
