--- a/QiHuangDJ/QiHuangDJTests/QiHuangDJTests-Info.plist
+++ b/QiHuangDJ/QiHuangDJTests/QiHuangDJTests-Info.plist
@@ -18,5 +18,18 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>None</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent1102327827</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string></string>
+		</dict>
+	</array>
 </dict>
 </plist>
